NN-1918 IEP Role Access (#170)
* NN-1918 IEP Role Access - implement an end-point to enable bulk add role to NWEB caseload based on existing role memberships,followed by removing legacy role assignments.

* NN-1918 IEP Role Access - implement an end-point to enable bulk add role to NWEB caseload based on existing role memberships,followed by removing legacy role assignments.

* NN-1918 IEP Role Access - implement an end-point to enable bulk add role to NWEB caseload based on existing role memberships,followed by removing legacy role assignments.

* NN-1918 IEP Role Access - implement an end-point to enable bulk add role to NWEB caseload based on existing role memberships,followed by removing legacy role assignments.

* NN-1918 IEP Role Access - 1) invoking user must have MAINTAIN_ACCESS_ROLES_ADMIN role. 2) Change logging level from debug to info and include exception.